refractoring, deleting unnecessary imports and codes, and optimizing codes